[package]
authors = ["Joseph Brailsford <joe@brailsford.xyz>"]
edition = "2018"
name = "vertical-vindication"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
regex = "1.5.4"
crossbeam = "0.8.1"
lazy_static = "1.4.0"
structopt = "0.3.22"